Added `demos/abstract-version` branch as an initializer for other demos
- Added abstract content, images and layouts statically
- Created an header and a footer
- No interactivity, no aminations just an HTML/CSS slider

--- a/demos/css-with-unmounting/index.html
+++ b/demos/css-with-unmounting/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>/demos/css-with-unmounting/</title>
+    <title>/demos/css-with-unmounting/ - Case Study | CSS Animations</title>
   </head>
 
   <body>
