--- a/demos/react-transition-group/index.html
+++ b/demos/react-transition-group/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>/demos/react-transition-group/</title>
+    <title>/demos/react-transition-group/ - Case Study | CSS Animations</title>
   </head>
 
   <body>
