--- a/demos/react-transition-group/index.html
+++ b/demos/react-transition-group/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>/demos/react-transition-group/ - Case Study | CSS Animations</title>
+    <title>/demos/framer-motion/ - Case Study | CSS Animations</title>
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.tsx"></script>
+    <script type="module" src="../abstract-version/main.tsx"></script>
   </body>
 </html>
